Implement notification flow and localization

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,5 +14,77 @@
   "undo": "Undo",
   "dismissHelpBanner": "Dismiss tips",
   "openProfile": "Open profile",
-  "snoozeTemporarilyDisabled": "Snooze temporarily unavailable"
+  "snoozeTemporarilyDisabled": "Snooze temporarily unavailable",
+  "valuePropositionHeadline": "Stay consistent in just three taps a day with an anonymous accountability pair.",
+  "valuePropositionSubheadline": "Three taps. One partner. Habits that finally stick.",
+  "onboardingFeatureMiniQuest": "Break goals into rewarding mini-quests you can finish today.",
+  "onboardingFeatureAnonymousPair": "Match anonymously for genuine accountability without pressure.",
+  "onboardingFeatureNotifications": "We only nudge you at the times you choose, so reminders feel helpful—not nagging.",
+  "notificationPrePromptTitle": "We use notifications sparingly",
+  "notificationPrePromptBody": "Enable reminders to get a gentle nudge at the moments you select. You can change or disable them anytime from Settings.",
+  "notificationPermissionBannerTitle": "Enable reminders to stay on track",
+  "notificationPermissionBannerBody": "Notification access is currently off. Turn it on to receive up to three timely nudges per day.",
+  "timeDriftBannerTitle": "Check your device clock",
+  "timeDriftBannerBody": "We detected a large difference between your device time and trusted servers. Fixing the clock keeps streaks and reminders accurate.",
+  "onboardingMiniQuestTitle": "Mini-quests that stick",
+  "onboardingAccountabilityTitle": "Anonymous accountability",
+  "onboardingSmartRemindersTitle": "Smart reminders (optional)",
+  "onboardingSkipButton": "Skip",
+  "onboardingNextButton": "Next",
+  "onboardingContinueButton": "Continue with notifications",
+  "notificationPrePromptPrimaryAction": "Enable reminders",
+  "notificationPrePromptSecondaryAction": "Not now",
+  "homeHelpBannerMessage": "Complete three quests each day and swap High-fives with your pair!",
+  "notificationPermissionPrimaryAction": "Enable notifications",
+  "commonDismiss": "Dismiss",
+  "timeDriftBannerPrimaryAction": "View fix steps",
+  "notificationPermissionGranted": "Notifications enabled.",
+  "notificationPermissionDenied": "Notification permission is still disabled.",
+  "notificationPermissionMuted": "Notifications turned off.",
+  "homeQuestReadPageTitle": "Read 1 page of a book",
+  "homeQuestReadPageCategory": "Learning",
+  "homeQuestPushUpsTitle": "Do 5 push-ups",
+  "homeQuestPushUpsCategory": "Exercise",
+  "homeQuestTidySurfaceTitle": "Tidy one surface",
+  "homeQuestTidySurfaceCategory": "Tidying",
+  "homeSuggestionDeepBreathingTitle": "Deep breathing",
+  "homeSuggestionDeepBreathingSubtitle": "1 minute • Calm mind",
+  "homeSuggestionInboxZeroTitle": "Inbox zero",
+  "homeSuggestionInboxZeroSubtitle": "5 emails • Focus",
+  "homeSuggestionStretchBreakTitle": "Stretch break",
+  "homeSuggestionStretchBreakSubtitle": "2 minutes • Mobility",
+  "homeSuggestionWaterReminderTitle": "Water reminder",
+  "homeSuggestionWaterReminderSubtitle": "1 glass • Hydration",
+  "homeSuggestionGratitudeNoteTitle": "Gratitude note",
+  "homeSuggestionGratitudeNoteSubtitle": "30 seconds • Reflection",
+  "settingsTitle": "Settings",
+  "settingsGeneralSection": "General Settings",
+  "settingsNotificationsTileTitle": "Push Notifications",
+  "settingsNotificationsTileSubtitle": "Reminders & partner updates",
+  "settingsNotificationTimesTile": "Notification Times",
+  "settingsSoundsTile": "Sounds",
+  "settingsSendTestNotification": "Send test notification",
+  "settingsSendTestNotificationSubtitle": "Verify deep link and OS behavior",
+  "settingsLanguageTileTitle": "Language",
+  "settingsPrivacySection": "Privacy & Data",
+  "settingsDataSyncTileTitle": "Data Sync",
+  "settingsDataSyncTileSubtitle": "Keep data synced across devices",
+  "settingsManageBlockedUsers": "Manage Blocked Users",
+  "settingsExportData": "Export My Data",
+  "settingsDeleteAccount": "Delete Account & Data",
+  "settingsAboutSection": "About MinQ",
+  "settingsTermsOfService": "Terms of Service",
+  "settingsPrivacyPolicy": "Privacy Policy",
+  "settingsAppVersion": "App Version",
+  "settingsLanguagePickerTitle": "Choose your language",
+  "languageSystemDefault": "Use system setting",
+  "languageEnglish": "English",
+  "languageJapanese": "Japanese",
+  "commonConfirm": "Confirm",
+  "languageChangeApplied": "Language updated.",
+  "testNotificationTitle": "This is a MinQ test notification",
+  "testNotificationBody": "Tap to open the Record screen and verify the deep link.",
+  "testNotificationScheduled": "Test notification scheduled.",
+  "testNotificationChannelName": "MinQ test notifications",
+  "testNotificationChannelDescription": "Notifications used to verify delivery and deep links."
 }
