--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -14,5 +14,77 @@
   "undo": "元に戻す",
   "dismissHelpBanner": "ヒントを閉じる",
   "openProfile": "プロフィールを開く",
-  "snoozeTemporarilyDisabled": "スヌーズは一時的に無効です"
+  "snoozeTemporarilyDisabled": "スヌーズは一時的に無効です",
+  "valuePropositionHeadline": "匿名の相棒と、1日3タップで習慣化を続けよう。",
+  "valuePropositionSubheadline": "3タップ、1人のパートナー。習慣がちゃんと定着。",
+  "onboardingFeatureMiniQuest": "目標を今日終わらせられるご褒美ミニQuestに分解します。",
+  "onboardingFeatureAnonymousPair": "匿名でマッチして、気負わない本物の相互支援を。",
+  "onboardingFeatureNotifications": "通知は自分で選んだ時間だけ。うるさくない優しい後押しです。",
+  "notificationPrePromptTitle": "通知は必要なときだけ",
+  "notificationPrePromptBody": "選んだタイミングでそっとリマインドします。設定からいつでも変更・オフにできます。",
+  "notificationPermissionBannerTitle": "リマインダーを有効にして習慣化",
+  "notificationPermissionBannerBody": "通知がオフになっています。1日最大3回のタイムリーな後押しを受け取りましょう。",
+  "timeDriftBannerTitle": "端末の時刻を確認してください",
+  "timeDriftBannerBody": "端末時刻と信頼できるサーバーで大きなずれを検知しました。正しい時刻に直すとストリークと通知が守られます。",
+  "onboardingMiniQuestTitle": "続けられるミニQuest",
+  "onboardingAccountabilityTitle": "匿名ペアの相互支援",
+  "onboardingSmartRemindersTitle": "選べるスマート通知",
+  "onboardingSkipButton": "スキップ",
+  "onboardingNextButton": "次へ",
+  "onboardingContinueButton": "通知を設定して続ける",
+  "notificationPrePromptPrimaryAction": "リマインダーを有効にする",
+  "notificationPrePromptSecondaryAction": "今回はやめておく",
+  "homeHelpBannerMessage": "毎日3つのQuestをこなして、ペアとHigh-fiveを送り合おう！",
+  "notificationPermissionPrimaryAction": "通知を有効にする",
+  "commonDismiss": "閉じる",
+  "timeDriftBannerPrimaryAction": "対処方法を見る",
+  "notificationPermissionGranted": "通知を有効にしました。",
+  "notificationPermissionDenied": "通知はまだ有効になっていません。",
+  "notificationPermissionMuted": "通知をオフにしました。",
+  "homeQuestReadPageTitle": "本を1ページ読む",
+  "homeQuestReadPageCategory": "学習",
+  "homeQuestPushUpsTitle": "腕立て伏せを5回",
+  "homeQuestPushUpsCategory": "運動",
+  "homeQuestTidySurfaceTitle": "スペースを1か所片付ける",
+  "homeQuestTidySurfaceCategory": "片付け",
+  "homeSuggestionDeepBreathingTitle": "深呼吸",
+  "homeSuggestionDeepBreathingSubtitle": "1分 • 心を落ち着かせる",
+  "homeSuggestionInboxZeroTitle": "受信トレイ整理",
+  "homeSuggestionInboxZeroSubtitle": "メール5件 • 集中",
+  "homeSuggestionStretchBreakTitle": "ストレッチ休憩",
+  "homeSuggestionStretchBreakSubtitle": "2分 • 可動性アップ",
+  "homeSuggestionWaterReminderTitle": "水分リマインダー",
+  "homeSuggestionWaterReminderSubtitle": "コップ1杯 • 水分補給",
+  "homeSuggestionGratitudeNoteTitle": "感謝のひと言",
+  "homeSuggestionGratitudeNoteSubtitle": "30秒 • 振り返り",
+  "settingsTitle": "設定",
+  "settingsGeneralSection": "全般",
+  "settingsNotificationsTileTitle": "プッシュ通知",
+  "settingsNotificationsTileSubtitle": "リマインダーとペアからのお知らせ",
+  "settingsNotificationTimesTile": "通知時間",
+  "settingsSoundsTile": "サウンド",
+  "settingsSendTestNotification": "テスト通知を送信",
+  "settingsSendTestNotificationSubtitle": "ディープリンクと通知の動作を確認",
+  "settingsLanguageTileTitle": "表示言語",
+  "settingsPrivacySection": "プライバシーとデータ",
+  "settingsDataSyncTileTitle": "データ同期",
+  "settingsDataSyncTileSubtitle": "複数端末でデータを同期する",
+  "settingsManageBlockedUsers": "ブロックしたユーザーを管理",
+  "settingsExportData": "データを書き出す",
+  "settingsDeleteAccount": "アカウントとデータを削除",
+  "settingsAboutSection": "MinQについて",
+  "settingsTermsOfService": "利用規約",
+  "settingsPrivacyPolicy": "プライバシーポリシー",
+  "settingsAppVersion": "アプリバージョン",
+  "settingsLanguagePickerTitle": "言語を選択",
+  "languageSystemDefault": "端末の設定に合わせる",
+  "languageEnglish": "英語",
+  "languageJapanese": "日本語",
+  "commonConfirm": "決定",
+  "languageChangeApplied": "言語を更新しました。",
+  "testNotificationTitle": "MinQのテスト通知です",
+  "testNotificationBody": "タップして記録画面が開くか確認してください。",
+  "testNotificationScheduled": "テスト通知を送信しました。",
+  "testNotificationChannelName": "MinQテスト通知",
+  "testNotificationChannelDescription": "通知の送達とディープリンクを確認するためのチャネルです。"
 }
