Implement null safety guards and accessibility fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,6 +37,7 @@
   "homeHelpBannerMessage": "Complete three quests each day and swap High-fives with your pair!",
   "notificationPermissionPrimaryAction": "Enable notifications",
   "commonDismiss": "Dismiss",
+  "completedQuestSemanticLabel": "Completed quest indicator",
   "timeDriftBannerPrimaryAction": "View fix steps",
   "notificationPermissionGranted": "Notifications enabled.",
   "notificationPermissionDenied": "Notification permission is still disabled.",
